--- a/.env.local
+++ b/.env.local
@@ -1,20 +1,20 @@
 # RENAME THIS FILE TO .env.local
 # THEN REGISTER A NEW WEB APP ON FIREBASE 
 # AND ENTER THE DETAILS HERE
-STORAGE_BUCKET=""
-PROJECT_ID=""
+STORAGE_BUCKET="8JpOx3VN8QWbikHK0E3O "
+PROJECT_ID="linkshorterner-d70c1"
 AUTH_DOMAIN=""
 MEASUREMENT_ID=""
 APP_ID=""
-MESSAGING_SENDER_ID=""
-API_KEY=""
+MESSAGING_SENDER_ID="743051047509 "
+API_KEY="AIzaSyByUYX2wdjjsDBH6t30jHki3Z3mCucd8L8 "
 
 # CAN BE ANYTHING, THIS IS FOR MANUALLY BLOCKING THE LINKS THAT ARE NOT SAFE
-SECRET_KEY=""
+SECRET_KEY="sntstnnt"
 
 # ENTER YOUR GOOGLE SAFE BROWSING API KEY HERE TO BLOCK MALICIOUS LINKS
 SKIP_SAFE_BROWSING=true
 SAFE_BROWSING_API_KEY="" # NO NEED TO ENTER THIS IF SKIP_SAFE_BROWSING IS TRUE
 
 # ENTER YOUR WEBSITE DOMAIN NAME HERE, THE LAST SLASH IS IMPORTANT
-NEXT_PUBLIC_BASE_URL="http://website.com/"
+NEXT_PUBLIC_BASE_URL="https://janis.fun/"
