--- a/.env.local
+++ b/.env.local
@@ -1,13 +1,13 @@
 # RENAME THIS FILE TO .env.local
 # THEN REGISTER A NEW WEB APP ON FIREBASE 
 # AND ENTER THE DETAILS HERE
-STORAGE_BUCKET="8JpOx3VN8QWbikHK0E3O "
+STORAGE_BUCKET="gs://linkshorterner-d70c1.appspot.com"
 PROJECT_ID="linkshorterner-d70c1"
 AUTH_DOMAIN=""
 MEASUREMENT_ID=""
-APP_ID=""
-MESSAGING_SENDER_ID="743051047509 "
-API_KEY="AIzaSyByUYX2wdjjsDBH6t30jHki3Z3mCucd8L8 "
+APP_ID="743051047509"
+MESSAGING_SENDER_ID="743051047509"
+API_KEY="AIzaSyByUYX2wdjjsDBH6t30jHki3Z3mCucd8L8"
 
 # CAN BE ANYTHING, THIS IS FOR MANUALLY BLOCKING THE LINKS THAT ARE NOT SAFE
 SECRET_KEY="sntstnnt"
