--- a/.env.local
+++ b/.env.local
@@ -1,11 +1,11 @@
 # RENAME THIS FILE TO .env.local
 # THEN REGISTER A NEW WEB APP ON FIREBASE 
 # AND ENTER THE DETAILS HERE
-STORAGE_BUCKET="gs://linkshorterner-d70c1.appspot.com"
+STORAGE_BUCKET="http://linkshorterner-d70c1.appspot.com/"
 PROJECT_ID="linkshorterner-d70c1"
-AUTH_DOMAIN=""
+AUTH_DOMAIN="linkshorterner-d70c1.firebaseapp.com"
 MEASUREMENT_ID=""
-APP_ID="743051047509"
+APP_ID="1:743051047509:web:34ba431d787cd905f31adc"
 MESSAGING_SENDER_ID="743051047509"
 API_KEY="AIzaSyByUYX2wdjjsDBH6t30jHki3Z3mCucd8L8"
 
