--- a/.env.local
+++ b/.env.local
@@ -1,20 +1,20 @@
 # RENAME THIS FILE TO .env.local
 # THEN REGISTER A NEW WEB APP ON FIREBASE 
 # AND ENTER THE DETAILS HERE
-STORAGE_BUCKET="http://linkshorterner-d70c1.appspot.com/"
+STORAGE_BUCKET="linkshorterner-d70c1.appspot.com"
 PROJECT_ID="linkshorterner-d70c1"
 AUTH_DOMAIN="linkshorterner-d70c1.firebaseapp.com"
-MEASUREMENT_ID=""
+MEASUREMENT_ID="G-RC9DTX07GX"
 APP_ID="1:743051047509:web:34ba431d787cd905f31adc"
 MESSAGING_SENDER_ID="743051047509"
 API_KEY="AIzaSyByUYX2wdjjsDBH6t30jHki3Z3mCucd8L8"
 
 # CAN BE ANYTHING, THIS IS FOR MANUALLY BLOCKING THE LINKS THAT ARE NOT SAFE
-SECRET_KEY="sntstnnt"
+SECRET_KEY=""
 
 # ENTER YOUR GOOGLE SAFE BROWSING API KEY HERE TO BLOCK MALICIOUS LINKS
 SKIP_SAFE_BROWSING=true
 SAFE_BROWSING_API_KEY="" # NO NEED TO ENTER THIS IF SKIP_SAFE_BROWSING IS TRUE
 
 # ENTER YOUR WEBSITE DOMAIN NAME HERE, THE LAST SLASH IS IMPORTANT
-NEXT_PUBLIC_BASE_URL="https://janis.fun/"
+NEXT_PUBLIC_BASE_URL="https://linkshortph.netlify.app/"
